# signal-sim-8phase

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  signal-sim-8phase.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
data/: traffic-signals.json
data/data/docs/: 01-Project_Overview_and_Best_Practices.md  02-Directory_Structure_Guide.md  03-Environment_Management_Python_Tools.md  04-Code_Style_And_Linting.md  05-Dependency_Management.md  11-15.md  16-20.md  21-25.md  26-30.md  6-10.md  AGENT_ARCHITECTURE.md  FILE_WATCHER.md  FINE_TUNING.md  MEMORY_STORE.md  MODEL_SETUP.md  TROUBLESHOOTING.md  USAGE.md  additionaltopics.md  (+1 more)
docker/: dev.Dockerfile  rpi.Dockerfile
docs/: conf.py  index.rst  intersection_layout.md  modules.rst
gcp/cloud_functions/: hello_http.py
gcp/cloud_run/: service.yaml
gcp/scripts/: deploy.sh
gcp/terraform/: main.tf
notebooks/: 01-eda.ipynb  02-llm-tests.ipynb  utils.ipynb
rpi/: setup.sh  signal-sim-8phase.service
scripts/: signal_sim_engine.py
src/: agent_example.py
src/cli/: main.py
src/core/: config.py  logger.py  middleware.py
src/data/: loader.py
src/llm/: anthropic.py  huggingface.py  openai.py
src/midi/: processor.py
src/realtime/: dispatcher.py  midi_handler.py  sensor_loop.py
src/traffic/: simulator.py
tests/: conftest.py
tests/cli/: test_main.py
tests/core/: test_utils.py
tests/llm/: test_wrapper.py
