[tool.poetry]
name = "signal-sim-8phase"
description = "Modular Python scaffold for traffic signal simulation and GIS mapping."
authors = ["Lt-Blmr <your@email.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
folium = "*"
geopandas = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
